--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -88,4 +88,8 @@ a{
   font-weight: 300;
   font-size: 22px;
   line-height: 28px;
+  @media (max-width: 670px) {
+    padding: 5px 15px;
+    font-size: 16px;
+  }
 }
